cli/tests/error_005_missing_dynamic_import.ts.out
error: Uncaught (in promise) TypeError: Cannot resolve module "[WILDCARD]/cli/tests/bad-module.ts".
  const badModule = await import("./bad-module.ts");
                    ^
    at async file://[WILDCARD]/error_005_missing_dynamic_import.ts:3:21
